# tinkoff-bank-rs

./: .gitignore  Cargo.toml  README.md  shell.nix
.github/workflows/: ci.yml  release.yml  test.yml
example/: Cargo.toml
example/src/: main.rs
src/: builder.rs  client.rs  data_structs.rs  lib.rs
tests/: auth_by_password.rs  auth_by_phone.rs  auth_by_pin.rs  confirm_auth_by_phone.rs  list_accounts.rs  list_operations.rs  ping.rs  request_session.rs  set_auth_pin.rs
