[package]
name = "tinkoff_bank_rs"
version = "0.1.0"
authors = ["Nikita Sivakov <sivakov512@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
async-std = { version = "1.5", features = ["attributes"] }
httpmock = "0.5"
rstest = "0.6"
