[package]
name = "tinkoff-bank"
version = "0.1.0"
authors = ["Nikita Sivakov <sivakov512@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Some parts of API used by Tinkoff mobile app"
repository = "https://github.com/sivakov512/tinkoff-bank-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
async-std = { version = "1.10", features = ["attributes"] }
httpmock = "0.6"
rstest = "0.11"
