[package]
name = "example"
version = "0.1.0"
authors = ["Nikita Sivakov <sivakov512@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinkoff_bank_rs = { path = "../" }
tokio = { version = "1", features = ["full"] }
